--- a/hello.yml
+++ b/hello.yml
@@ -16,7 +16,9 @@
   #dependencies:
     #galaxy: requirements.yml
     #python: requirements.txt
-
+  vars:
+    ansible_python_interpreter: /usr/bin/python3.9
+    
   tasks:
    - name: Check SQL Server is Installed
      win_service:
