--- a/check-packages.yml
+++ b/check-packages.yml
@@ -10,7 +10,7 @@ o---
     # Copy the required resources
       - name: Copy the files
         ansible.builtin.copy:
-          src:  /python
+          src:  /python/check-packages.py
           dest: /home/hinceanb/python
           force: true
           remote_src: true
