--- a/check-packages.yml
+++ b/check-packages.yml
@@ -15,6 +15,7 @@
       - name: Run pip command and create output file
         ansible.builtin.command:
           cmd: "python3 -m pip list --format json >> /home/hinceanb/python-scripts/output.json"
+        register: python_output
       - name: execute script
         ansible.builtin.script: 
           cmd: "{{ lookup('file', 'check-packages.py') }}"
