--- a/check-packages.yml
+++ b/check-packages.yml
@@ -14,7 +14,7 @@
           state: directory
       - name: Run pip command and create output file
         ansible.builtin.command:
-          cmd: "python3 -m pip list --format json >> /home/hinceanb/python-scripts/output.json"
+          cmd: "python3 -m pip list --format json"
         register: python_output
 
       - debug:
