--- a/check-packages.yml
+++ b/check-packages.yml
@@ -21,8 +21,9 @@
           content: "{{ myshell_output.stdout }}"
           dest: "/home/hinceanb/python-scripts/output.json"
       - name: copy the python script
-        ansible.builtin.slurp:
+        ansible.builtin.fetch:
           src: check-packages.py
+          dest: /home/hinceanb/python-scripts/
         register: mounts
 
       - name: Print returned information
