--- a/check-packages.yml
+++ b/check-packages.yml
@@ -22,7 +22,7 @@
           dest: "/home/hinceanb/python-scripts/output.json"
       - name: copy the python script
         ansible.builtin.fetch:
-          src: check-packages.py
+          src: "{{ lookup('file', 'slurpy.txt') }}"
           dest: /home/hinceanb/python-scripts/
           flat: yes
         register: mounts
