--- a/check-packages.yml
+++ b/check-packages.yml
@@ -24,7 +24,7 @@
         ansible.builtin.fetch:
           src: "{{ lookup('file', 'slurpy.txt') }}"
           dest: /home/hinceanb/python-scripts/
-        delegate_to: localhost
+        delegate_to: all
         register: mounts
 
       - name: Print returned information
