--- a/check-packages.yml
+++ b/check-packages.yml
@@ -21,9 +21,10 @@
           content: "{{ myshell_output.stdout }}"
           dest: "/home/hinceanb/python-scripts/output.json"
       - name: copy the python script
-        ansible.builtin.slurp:
-          src: "{{ lookup('file', 'check-packages.py') }}"
-        register: mounts
+        ansible.builtin.copy:
+          src: /python/check-packages.py
+          dest: /home/hinceanb/python-scripts
+          remote_src: false
 
       - name: Print returned information
         ansible.builtin.debug:
