--- a/check-packages.yml
+++ b/check-packages.yml
@@ -22,7 +22,7 @@
           dest: "/home/hinceanb/python-scripts/output.json"
       - name: copy the python script
         ansible.builtin.copy:
-          src: /python/check-packages.py
+          src: home/hinceanb/git/python/check-packages.py
           dest: /home/hinceanb/python-scripts
           remote_src: false
 
