--- a/check-packages.yml
+++ b/check-packages.yml
@@ -21,7 +21,7 @@
           content: "{{ myshell_output.stdout }}"
           dest: "/home/hinceanb/python-scripts/output.json"
       - name: copy the python script
-        ansible.builtin.fetch:
+        ansible.builtin.copy:
           src: /home/hinceanb/git/python/check-packages.py
           dest: /home/hinceanb/python-scripts
          
