--- a/check-packages.yml
+++ b/check-packages.yml
@@ -20,16 +20,16 @@
         copy:
           content: "{{ myshell_output.stdout }}"
           dest: "/home/hinceanb/python-scripts/output.json"
-      - name: copy the python script
-        ansible.builtin.copy:
-          src: /home/hinceanb/git/python/check-packages.py
-          dest: /home/hinceanb/python-scripts
+     
       - name: Run the python script
         ansible.builtin.script:
           chdir: /home/hinceanb/python-scripts
           cmd: /home/hinceanb/git/python/check-packages.py
           executable: python3
-          
+        register: python_output
+
+        debug:
+          msg: "{{ python_output.stdout }}"
          
 
       
