--- a/check-packages.yml
+++ b/check-packages.yml
@@ -24,7 +24,7 @@
       - name: Run the python script
         ansible.builtin.script:
           chdir: /home/hinceanb/python-scripts
-          cmd: check-packages.py
+          cmd: python/check-packages.py
           executable: python3
         register: python_output
 
