--- a/cdu_users.yml
+++ b/cdu_users.yml
@@ -38,7 +38,7 @@
           #comment: Ansible created admin user
           shell: /bin/bash
           create_home: true 
-          group: wheel 
+          group: gods 
           append: true
           force: true # this should only affect users with state that is absent 
           state: "{{ item.state | default ('present') }}"
